ticket/dd6/dd68e5e13cd322e810ec994507a35e7dafdee263/6bed715518e00be1539312b8a59c5fd52f13a546.log
D:\>cpan -i Wx

Loading internal logger. Log::Log4perl recommended for better logging
CPAN: CPAN::SQLite loaded ok (v0.217)
Database was generated on Mon, 16 Sep 2019 18:17:24 GMT
Running install for module 'Wx'
CPAN: Digest::SHA loaded ok (v6.02)
CPAN: Compress::Zlib loaded ok (v2.086)
Checksum for C:\STRAWB~1\cpan\sources\authors\id\M\MD\MDOOTSON\Wx-0.9932.tar.gz ok
CPAN: Archive::Tar loaded ok (v2.32)
CPAN: YAML::XS loaded ok (v0.78)
CPAN: CPAN::Meta::Requirements loaded ok (v2.140)
CPAN: Parse::CPAN::Meta loaded ok (v2.150010)
CPAN: CPAN::Meta loaded ok (v2.150010)
CPAN: Module::CoreList loaded ok (v5.20190522)
Configuring M/MD/MDOOTSON/Wx-0.9932.tar.gz with Makefile.PL
Checking if your kit is complete...
Looks good
'WX' is not a known MakeMaker parameter name.
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Writing MYMETA.yml and MYMETA.json
Generating a gmake-style Makefile
Writing Makefile for Wx
Writing MYMETA.yml and MYMETA.json

======================================================================
For installation instructions and further help please see
docs/INSTALL.pod

For command line switches help use:
perl Makefile.PL --help
======================================================================

  MDOOTSON/Wx-0.9932.tar.gz
  C:\Strawberry\perl\bin\perl.exe Makefile.PL -- OK
Running make for M/MD/MDOOTSON/Wx-0.9932.tar.gz
"C:\Strawberry\perl\bin\perl.exe" script/make_v_cback.pl > cpp/v_cback_def.h
"C:\Strawberry\perl\bin\perl.exe" script/copy_files.pl files.lst
cp cpp/wxapi.h blib\lib\Wx\cpp\wxapi.h
cp cpp/v_cback_def.h blib\lib\Wx\cpp\v_cback_def.h
cp cpp/chkconfig.h blib\lib\Wx\cpp\chkconfig.h
cp cpp/e_cback.h blib\lib\Wx\cpp\e_cback.h
cp typemap blib\lib\Wx\typemap
cp cpp/event.h blib\lib\Wx\cpp\event.h
cp cpp/setup.h blib\lib\Wx\cpp\setup.h
cp cpp/helpers.h blib\lib\Wx\cpp\helpers.h
cp cpp/compat.h blib\lib\Wx\cpp\compat.h
cp Opt blib\arch\Wx\build\Opt.pm
cp cpp/overload.h blib\lib\Wx\cpp\overload.h
cp cpp/v_cback.h blib\lib\Wx\cpp\v_cback.h
cp cpp/streams.h blib\lib\Wx\cpp\streams.h
cp cpp/constants.h blib\lib\Wx\cpp\constants.h
"C:\Strawberry\perl\bin\perl.exe" -MExtUtils::Command -e touch -- wxt_copy_files
cp lib/Wx/App.pm blib\lib\Wx\App.pm
cp build/Wx/build/MakeMaker.pm blib\lib\Wx\build\MakeMaker.pm
cp build/Wx/Overload/Handle.pm blib\lib\Wx\Overload\Handle.pm
cp build/Wx/build/MakeMaker/Win32.pm blib\lib\Wx\build\MakeMaker\Win32.pm
cp build/Wx/build/MakeMaker/Core.pm blib\lib\Wx\build\MakeMaker\Core.pm
cp build/Wx/build/MakeMaker/Win32_MinGW.pm blib\lib\Wx\build\MakeMaker\Win32_MinGW.pm
cp build/Wx/build/Options.pm blib\lib\Wx\build\Options.pm
cp lib/Wx/Api.pod blib\lib\Wx\Api.pod
cp build/Wx/Overload/Driver.pm blib\lib\Wx\Overload\Driver.pm
cp build/Wx/XSP/Virtual.pm blib\lib\Wx\XSP\Virtual.pm
cp build/Wx/XSP/Overload.pm blib\lib\Wx\XSP\Overload.pm
cp build/Wx/XSP/Enum.pm blib\lib\Wx\XSP\Enum.pm
cp build/Wx/build/MakeMaker/Win32_MSVC.pm blib\lib\Wx\build\MakeMaker\Win32_MSVC.pm
cp build/Wx/XSP/Event.pm blib\lib\Wx\XSP\Event.pm
cp build/Wx/build/MakeMaker/Any_wx_config.pm blib\lib\Wx\build\MakeMaker\Any_wx_config.pm
cp build/Wx/build/MakeMaker/Hacks.pm blib\lib\Wx\build\MakeMaker\Hacks.pm
cp build/Wx/build/Utils.pm blib\lib\Wx\build\Utils.pm
cp build/Wx/build/MakeMaker/MacOSX_GCC.pm blib\lib\Wx\build\MakeMaker\MacOSX_GCC.pm
cp build/Wx/build/MakeMaker/Any_OS.pm blib\lib\Wx\build\MakeMaker\Any_OS.pm
cp Wx.pm blib\lib\Wx.pm
cp lib/Wx/Mini.pm blib\lib\Wx\Mini.pm
cp lib/Wx/Loader.pod blib\lib\Wx\Loader.pod
cp lib/Wx/ArtProvider.pm blib\lib\Wx\ArtProvider.pm
cp lib/Wx/Timer.pm blib\lib\Wx\Timer.pm
cp lib/Wx/Thread.pod blib\lib\Wx\Thread.pod
cp lib/Wx/Menu.pm blib\lib\Wx\Menu.pm
cp lib/Wx/Locale.pm blib\lib\Wx\Locale.pm
cp lib/Wx/NewClass.pod blib\lib\Wx\NewClass.pod
cp lib/Wx/Event.pm blib\lib\Wx\Event.pm
cp lib/Wx/RadioBox.pm blib\lib\Wx\RadioBox.pm
"C:\Strawberry\perl\bin\perl.exe" script/wxperl_overload cpp\ovl_const.cpp cpp\ovl_const.h overload.lst
Writing 'cpp\ovl_const.h'.
Writing 'cpp\ovl_const.cpp'.
"C:\Strawberry\perl\bin\perl.exe" -MExtUtils::Command -e touch -- wxt_overload
gmake[1]: Entering directory 'C:/STRAWB~1/cpan/build/Wx-0.9932-7/ext'
gmake[2]: Entering directory 'C:/STRAWB~1/cpan/build/Wx-0.9932-7/ext/datetime'
Running Mkbootstrap for DateTime ()
"C:\Strawberry\perl\bin\perl.exe" -MExtUtils::Command -e chmod -- 644 "DateTime.bs"
"C:\Strawberry\perl\bin\perl.exe" -MExtUtils::Command::MM -e cp_nonempty -- DateTime.bs ..\..\blib\arch\auto\Wx\DateTime\DateTime.bs 644
"C:\Strawberry\perl\bin\perl.exe" "C:\Strawberry\perl\lib\ExtUtils/xsubpp"  -noprototypes -nolinenumbers  -typemap C:\STRAWB~1\perl\lib\ExtUtils\typemap -typemap C:\STRAWB~1\cpan\build\Wx-0.9932-7\typemap -typemap C:\STRAWB~1\cpan\build\Wx-0.9932-7\ext\datetime\typemap  DateTime.xs > DateTime.xsc
"C:\Strawberry\perl\bin\perl.exe" -MExtUtils::Command -e mv -- DateTime.xsc DateTime.c
g++  -m64  -O2 -mthreads -m64 -Os   -c -I. -I.. -IC:\Strawberry\perl\site\lib\Alien\wxWidgets\msw_3_0_2_uni_gcc_3_4\lib -IC:\Strawberry\perl\site\lib\Alien\wxWidgets\msw_3_0_2_uni_gcc_3_4\include -I. -I. -IC:\Strawberry\perl\site\lib\Alien\wxWidgets\msw_3_0_2_uni_gcc_3_4\lib -IC:\Strawberry\perl\site\lib\Alien\wxWidgets\msw_3_0_2_uni_gcc_3_4\include  -I. -I..\.. -IC:\Strawberry\perl\site\lib\Alien\wxWidgets\msw_3_0_2_uni_gcc_3_4\lib -IC:\Strawberry\perl\site\lib\Alien\wxWidgets\msw_3_0_2_uni_gcc_3_4\include -s -O2 -DWIN32 -DWIN64 -DCONSERVATIVE -D__USE_MINGW_ANSI_STDIO -DPERL_TEXTMODE_SCRIPTS -DPERL_IMPLICIT_CONTEXT -DPERL_IMPLICIT_SYS -DUSE_PERLIO -fwrapv -fno-strict-aliasing -mms-bitfields -s -O2   -DVERSION=\"0.01\" -DXS_VERSION=\"0.01\"  "-IC:\STRAWB~1\perl\lib\CORE" -DWXPL_EXT -DHAVE_W32API_H -D__WXMSW__ -DNDEBUG -D_UNICODE -DWXUSINGDLL -DNOPCH -DNO_GCC_PRAGMA   -DHAVE_W32API_H -D__WXMSW__ -DNDEBUG -D_UNICODE -DWXUSINGDLL -DNOPCH -DNO_GCC_PRAGMA    -DWXPL_EXT -DHAVE_W32API_H -D__WXMSW__ -DNDEBUG -D_UNICODE -DWXUSINGDLL -DNOPCH -DNO_GCC_PRAGMA   DateTime.c
In file included from ..\../cpp/wxapi.h:57,
                 from DateTime.c:23:
C:\Strawberry\perl\site\lib\Alien\wxWidgets\msw_3_0_2_uni_gcc_3_4\include/wx/hashmap.h: In static member function 'static void** _wxHashTableBase2::AllocTable(size_t)':
C:\STRAWB~1\perl\lib\CORE/perl.h:175:16: error: 'my_perl' was not declared in this scope
 #  define aTHX my_perl
                ^~~~~~~
C:\STRAWB~1\perl\lib\CORE/embedvar.h:38:18: note: in expansion of macro 'aTHX'
 #    define vTHX aTHX
                  ^~~~
C:\STRAWB~1\perl\lib\CORE/embedvar.h:54:19: note: in expansion of macro 'vTHX'
 #define PL_Mem   (vTHX->IMem)
                   ^~~~
C:\STRAWB~1\perl\lib\CORE/iperlsys.h:818:4: note: in expansion of macro 'PL_Mem'
  (*PL_Mem->pCalloc)(PL_Mem, (num), (size))
    ^~~~~~
C:\STRAWB~1\perl\lib\CORE/XSUB.h:612:33: note: in expansion of macro 'PerlMem_calloc'
 #    define calloc              PerlMem_calloc
                                 ^~~~~~~~~~~~~~
C:\Strawberry\perl\site\lib\Alien\wxWidgets\msw_3_0_2_uni_gcc_3_4\include/wx/hashmap.h:121:25: note: in expansion of macro 'calloc'
         return (void **)calloc(sz, sizeof(void*));
                         ^~~~~~
C:\STRAWB~1\perl\lib\CORE/perl.h:175:16: note: suggested alternative: 'my_fork'
 #  define aTHX my_perl
                ^~~~~~~
C:\STRAWB~1\perl\lib\CORE/embedvar.h:38:18: note: in expansion of macro 'aTHX'
 #    define vTHX aTHX
                  ^~~~
C:\STRAWB~1\perl\lib\CORE/embedvar.h:54:19: note: in expansion of macro 'vTHX'
 #define PL_Mem   (vTHX->IMem)
                   ^~~~
C:\STRAWB~1\perl\lib\CORE/iperlsys.h:818:4: note: in expansion of macro 'PL_Mem'
  (*PL_Mem->pCalloc)(PL_Mem, (num), (size))
    ^~~~~~
C:\STRAWB~1\perl\lib\CORE/XSUB.h:612:33: note: in expansion of macro 'PerlMem_calloc'
 #    define calloc              PerlMem_calloc
                                 ^~~~~~~~~~~~~~
C:\Strawberry\perl\site\lib\Alien\wxWidgets\msw_3_0_2_uni_gcc_3_4\include/wx/hashmap.h:121:25: note: in expansion of macro 'calloc'
         return (void **)calloc(sz, sizeof(void*));
                         ^~~~~~
gmake[2]: *** [Makefile:341: DateTime.o] Error 1
gmake[2]: Leaving directory 'C:/STRAWB~1/cpan/build/Wx-0.9932-7/ext/datetime'
gmake[1]: *** [Makefile:497: subdirs] Error 2
gmake[1]: Leaving directory 'C:/STRAWB~1/cpan/build/Wx-0.9932-7/ext'
gmake: *** [Makefile:647: subdirs] Error 2
  MDOOTSON/Wx-0.9932.tar.gz
  C:\STRAWB~1\c\bin\gmake.exe -- NOT OK
Stopping: 'install' failed for 'Wx'.

D:\>